K8s/ingress/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: robot-frontend
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "false"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/enable-modsecurity: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - robot.abhishek-k8s.squareops.co.in
    secretName: apps-tls
  rules:
  - host: robot.abhishek-k8s.squareops.co.in
    http:
      paths:
      - path: /
        backend:
          serviceName: web
          servicePort: 8080
